feat: :construction: Add modal
Add modal

--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,12 @@ a {
 li {
 	list-style: none;
 }
-
+/* .fade:not(.show) {
+    opacity: 1;
+}
+.modal{
+	display: block;
+} */
 
 /* SIDEBAR */
 #sidebar {
