--- a/css/style.css
+++ b/css/style.css
@@ -9,12 +9,12 @@
 
 :root {
 	--grey: #F1F0F6;
-	--dark-grey: #8D8D8D;
+	--dark-grey: #8d8d8d;
 	--light: #fff;
 	--dark: #000;
 	--green: #81D43A;
 	--light-green: #E3FFCB;
-	--blue: #1775F1;
+	--blue: #159454;
 	--light-blue: #D0E4FF;
 	--dark-blue: #0C5FCD;
 	--red: #FC3B56;
